# cuda-pesudo-tree

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  pixi.toml  test.cu
cmake/: GetVendor.cmake
include/: cpu_timer.hpp  gpu_timer.hpp  pt.hpp  random_gen.hpp  st.hpp  tb.hpp  test.hpp  timer.hpp
python/: main.py
python/bind/: main.cpp
python/test/: test.py
src/: pt.cpp  pt.cu  st.cpp  st.cu  tb.cpp  tb.cu  test.cpp  test.cu
test/: test.cpp
